<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_news_entries_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_news_entries_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_news_entries_label" />
    <PreferenceCategory
        android:title="@string/settings_news_categories_label">
        <ListPreference
            android:key="@string/settings_news_categories_key"
            android:defaultValue="@string/settings_news_categories_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values" />
    </PreferenceCategory>

</PreferenceScreen>